multi: enable MPP from different LN nodes.
